# eam-backend-rust

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros-derive/: Cargo.toml
macros-derive/src/: lib.rs
macros/src/: lib.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230301025818_0001/: migration.sql
prisma/migrations/20230301065418_0002/: migration.sql
src/: main.rs
src/assets/: mod.rs
src/errors/: mod.rs
src/maintainance_request/: mod.rs
src/user/: mod.rs
src/utils/: mod.rs
