[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = "*"
salvo = { git = "https://github.com/salvo-rs/salvo.git", features = [
    "anyhow",
    "jwt-auth",
], branch = "main" }
tokio = { version = "1.25.0", features = ["macros"] }
anyhow = "1.0.69"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "main" }
serde = { version = "1.0.152", features = ["derive"] }
once_cell = "1.17.1"
thiserror = "1.0.38"
chrono = "0.4.23"
sha2 = "0.10.6"
jsonwebtoken = "8.2.0"
dotenv = "0.15.0"
async-trait = "0.1.64"


[workspace]
members = ["prisma-cli"]
