[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli", "macros", "macros-derive"]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "1699cff77f47acbee5d8adf3684d64a15e964ae7", default-features = false, features = ["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "1699cff77f47acbee5d8adf3684d64a15e964ae7", default-features = false, features = ["postgresql"] }

[dependencies]
tracing = "*"
tracing-subscriber = "*"
axum = { version = "0.6.11", features = ["macros", "headers"] }
tower-http = { version = "0.4.0", features=["cors"]}
tokio = { version = "1.26.0", features = ["macros"] }
anyhow = "1.0.69"
prisma-client-rust.workspace = true
serde = { version = "1.0.156", features = ["derive"] }
once_cell = "1.17.1"
thiserror = "1.0.39"
chrono = "0.4.24"
sha2 = "0.10.6"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
async-trait = "0.1.66"
